--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
  
   <div data-role="main" class="ui-content">
   <div align="center">
+   <div id="jugador">
+   </div>
    <a href="#tablero" id="btnjugar" class="ui-btn ui-icon-arrow-r ui-btn-icon-right ui-shadow-icon ui-btn-corner-all ui-btn-inline">Jugar</a>
    </div>
   </div>
